# tust_newspaper

./: Article.cpp  Article.h  CMakeLists.txt  HeadDialog.cpp  HeadDialog.h  HeadDialog.ui  main.cpp  mainwindow.cpp  mainwindow.h
